# MarkoVision

./: .gitignore  Procfile  README.md  SPECS.md  app.py  dashboard.py  data_generator.py  hmm_model.py  markovision.spec  pyproject.toml  requirements.txt  start_prod.bat  start_prod.sh  wsgi.py
.github/workflows/: release.yml
assets/: style.css
